Number casting uses new Java API.